# linesync

./: .env.example  .gitignore  README.md  app.py  app.yaml  databricks.yml  pyproject.toml  requirements.txt
docs/: ANALYTICS.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  GENIE_SPACE.md  project-requirements.md  test-packing-slip.html
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BarcodeScanner.tsx  IntakePage.tsx  InventoryPage.tsx  PackingSlipUpload.tsx  SinkPage.tsx
frontend/src/hooks/: useBarcodeScanner.ts
frontend/src/types/: api.ts
marketing/: index.html
pipelines/: lakebase_to_delta.py
resources/: inventory_demo.yml  lakebase_pipeline.yml  replenishment_alert.yml
sql/: postgres_tables.sql
src/inventory_demo/: __init__.py  cli.py  config.py  infra.py
src/inventory_demo/api/: __init__.py  barcode_parser.py  main.py  packing_slip_parser.py  schemas.py  user.py
src/inventory_demo/core/: __init__.py  inventory_service.py  models.py
src/inventory_demo/db/: __init__.py  postgres.py  schemas.py
